--- a/css/styles.css
+++ b/css/styles.css
@@ -108,8 +108,28 @@ body {
     transition-property: all;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    
+    position: relative;
+    transition-property: all;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+
+
+.header-link::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 4px;
+    background-color: #2196F3;
+    border-radius: 2px;
+    opacity: 0;
+    transform: translateY(32px);
+}
+
+
 
 .header-mail-tel {
     display: flex;
@@ -137,12 +157,9 @@ body {
 }
 
 
-.header-link::after {
-    content: "";
-    width: 48px;
-    height: 4px;
-    background-color:  #2196F3;
-    border-radius: 2px;
+
+.header-link:hover::after {
+    opacity: 1;
 }
 
 .header-soc-icon {
