--- a/css/styles.css
+++ b/css/styles.css
@@ -347,7 +347,28 @@ padding-bottom: 94px;
 
 .about-item {
     margin-right: var(--typical-margin);
+    position: relative;
 }
+
+
+.about-top-text {
+    height: 70px;
+    width: 100%;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 16px;
+    text-align: center;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: var(--btn-font-color);
+    background: rgba(47, 48, 58, 0.8);
+    position: absolute;
+    padding: 27px 82px;
+    bottom: 0;
+}
+
 
 
 /* team */
