--- a/css/styles.css
+++ b/css/styles.css
@@ -54,8 +54,9 @@ body {
     background-color: var(--btn-font-color);
     padding-top: 24px;
     padding-bottom: 25px;
-    outline: solid #E5E5E5;
+    border-bottom: 1px solid #ECECEC;
 }
+
 
 .header .container {
     display: flex;
@@ -158,7 +159,7 @@ body {
 
 
 
-.header-link:hover::after {
+.header-link::after {
     opacity: 1;
 }
 
@@ -279,6 +280,7 @@ padding-bottom: 94px;
 
 .benefits-list {
     display: flex;
+    margin-left: -30px;
 }
 
 
@@ -374,7 +376,7 @@ padding-bottom: 94px;
 /* team */
 
 .team {
-    background: var(--btn-font-color);
+    background: var(--team-background-color);
     padding-top: 94px;
     padding-bottom: 94px;
 }
@@ -505,8 +507,7 @@ padding-bottom: 94px;
 .clients-our-list {
     justify-content: center;
     align-items: center;
-    margin-right: 30px;
-    margin-left: 80px;
+    margin-right: -30px;
     display: flex;
 }
 
@@ -521,16 +522,19 @@ padding-bottom: 94px;
 }
 
 .clients-link {
-    align-items: center;
-    justify-content: center;
     width: 100%;
     height: 100%;
+    align-items: center;
+    justify-content: center;
     display: flex;
     color: #AFB1B8;
     transition-property: all;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    padding: 0;
 }
+
+
 
 .clients-our-item {
     transition-property: all;
@@ -699,7 +703,7 @@ padding-bottom: 94px;
     transition-property: all;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    fill: #AFB1B8;
+    fill: var(--btn-font-color);
 }
 
 
@@ -726,7 +730,7 @@ padding-bottom: 94px;
 
 .portfolio-btn-list {
    display: flex;
-   margin-bottom: 34px;
+   margin-bottom: 50px;
    margin-left: 300px;
 }
 
