--- a/css/styles.css
+++ b/css/styles.css
@@ -624,7 +624,7 @@ padding-bottom: 94px;
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
-    color: var(--text-color);
+    color: rgba(255, 255, 255, 0.6);
 }
 
 .footer-link-tel{
@@ -633,7 +633,7 @@ padding-bottom: 94px;
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
-    color: var(--text-color);
+   color: rgba(255, 255, 255, 0.6);
 }
 
 .footer-title {
@@ -897,7 +897,7 @@ padding-bottom: 94px;
 
 
 .modal {
-    width: 500px;
+    width: 700px;
     min-height: 600px;
     background-color: var(--btn-font-color);
     border-radius: 5px;
