--- a/css/styles.css
+++ b/css/styles.css
@@ -124,11 +124,16 @@ body {
     bottom: 0;
     width: 100%;
     height: 4px;
-    background-color: #2196F3;
     border-radius: 2px;
-    opacity: 0;
     transform: translateY(32px);
+    background-color: #2196F3;
 }
+
+
+.header-link::after  {
+    background-color: currentColor;
+}
+
 
 
 
@@ -158,10 +163,6 @@ body {
 }
 
 
-
-.header-link::after {
-    opacity: 1;
-}
 
 .header-soc-icon {
     margin-right: 10px;
@@ -194,6 +195,7 @@ body {
 .header-mail:hover,
 .header-mail:focus {
     color: var(--accent-color);
+
 }
 
 
@@ -747,6 +749,7 @@ padding-bottom: 94px;
     transition-property: all;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    border: none;
 }
 
 .all {
