--- a/css/styles.css
+++ b/css/styles.css
@@ -117,21 +117,17 @@ body {
 
 
 
-.header-link::after {
-    content: "";
+
+.current::after {
     position: absolute;
+    content: '';
     left: 0;
-    bottom: 0;
+    bottom: -1px;
     width: 100%;
     height: 4px;
     border-radius: 2px;
     transform: translateY(32px);
     background-color: #2196F3;
-}
-
-
-.header-link::after  {
-    background-color: currentColor;
 }
 
 
